# struct

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .semgrepignore  .shellcheckrc  AGENTS.md  CLAUDE.md  DOCS.md  Makefile  NOTES.md  README.md  REGEX.md  REGEX_API.md  REGEX_PATHOLOGICAL.md  REPORT.md  UNDEF.md  UNDEF_SPEC.md  cspell.json  osv-scanner.toml  test_step1.py
.github/workflows/: build.yml  codeql.yml  lint.yml  security.yml
aql/: AGENTS.md  DOCS.md  Makefile  README.md
aql/src/: struct.aql
aql/test/: lint.aql  runner-lib.aql  runner.aql
c/: .clang-format  .clang-tidy  .gitignore  AGENTS.md  DOCS.md  Makefile  README.md
c/bench/: bench.c
c/src/: inject.c  re_util.c  regex.c  regex.h  transform.c  utility.c  value.c  value.h  value_io.c  value_io.h  voxgig_struct.h
c/tests/: regex_pathological.c  regex_test.c  runner.h  smoke.c  struct_corpus_test.c
clojure/: AGENTS.md  DOCS.md  Makefile  README.md  build.clj  deps.edn
cpp/: .clang-format  .clang-tidy  AGENTS.md  DOCS.md  Makefile  README.md  REFACTOR_PLAN.md  test-baseline.json
cpp/bench/: bench.cpp
cpp/overview/: library_overview.cpp
cpp/src/: utility_decls.hpp  value.hpp  value_io.hpp  voxgig_struct.hpp
cpp/tests/: regex_pathological.cpp  runner.hpp  smoke.cpp  struct_corpus_test.cpp  test_voxgig_struct.cpp  walk_bench.cpp
cs/: .editorconfig  DOCS.md  Makefile  README.md  Struct.cs  VoxgigStruct.csproj
cs/tests/: CorpusScoreboard.cs  Runner.cs  StructTest.cs  VoxgigStructTest.csproj  WalkBenchTest.cs
csharp/: .editorconfig  AGENTS.md  DOCS.md  Makefile  README.md  Struct.cs  VoxgigStruct.csproj  test-baseline.json
csharp/bench/: Program.cs  bench.csproj
csharp/tests/: RegexPathologicalTest.cs  StructTest.cs
dart/: .pubignore  AGENTS.md  CHANGELOG.md  DOCS.md  Makefile  README.md  pubspec.yaml
dart/bench/: bench.dart
dart/lib/: voxgig_struct.dart
dart/test/: runner.dart
design/: DOC_EXAMPLES.md  NOTES.md  REGEX.md  REGEX_API.md  REGEX_PATHOLOGICAL.md  REPORT.md  SELECT_NULL_KEY_BACKPORT.md  TESTPROVIDER_ASSESSMENT.md  TESTSPEC_MODEL.md  UNDEF.md  UNDEF_SPEC.md  testspec-schema.jsonic
elixir/: AGENTS.md  DOCS.md  Makefile  README.md  mix.exs
elixir/bench/: bench.exs
elixir/lib/: voxgig_struct.ex
elixir/test/: runner.exs
go/: .golangci.yml  AGENTS.md  DOCS.md  Makefile  README.md  client_test.go  go.mod  regex_pathological_test.go  voxgigstruct.go  voxgigstruct_test.go  walk_bench_test.go
go/bench/: main.go
go/testutil/: client_test.go  direct.go  runner.go  sdk.go
haskell/: AGENTS.md  CHANGELOG.md  DOCS.md  LICENSE  Makefile  README.md  voxgig-struct.cabal
haskell/bench/: Bench.hs
haskell/src/: VoxgigStruct.hs  Vregex.hs
haskell/test/: Runner.hs
java/: AGENTS.md  DOCS.md  Makefile  README.md  checkstyle.xml  pom.xml  release-settings.xml  spotbugs-exclude.xml  test-baseline.json
java/bench/: Bench.java
java/src/: Struct.java
java/test/: WalkBench.java
javascript/: AGENTS.md  DOCS.md  Makefile  NOTES.md  README.md  REVIEW.md  eslint.config.mjs  package.json
javascript/bench/: bench.js
javascript/src/: struct.js
javascript/test/: client.test.js  regex_pathological.test.js  runner.js  struct.test.js
js/: DOCS.md  Makefile  README.md  package.json
js/src/: struct.js
js/test/: sdk.js  struct.test.js  walk-bench.test.js
kotlin/: AGENTS.md  DOCS.md  Makefile  README.md  build.gradle.kts  detekt.yml  settings.gradle.kts
kotlin/bench/: bench.kt
kt/: .editorconfig  build.gradle.kts  detekt.yml
lua/: .luacheckrc  .stylua.toml  AGENTS.md  DOCS.md  README.md  makefile  setup.sh  struct.rockspec
lua/bench/: bench.lua
lua/src/: regex.lua  struct.lua
lua/test/: client_test.lua  regex_pathological.lua  regex_test.lua  runner.lua  sdk.lua  struct_test.lua  walk_bench.lua
ocaml/: .gitignore  AGENTS.md  DOCS.md  Makefile  README.md  dune-project  voxgig-struct.opam
ocaml/bench/: bench.ml
ocaml/src/: dune  voxgig_struct.ml  vregex.ml
ocaml/test/: runner.ml
perl/: AGENTS.md  DOCS.md  Makefile  README.md
perl/bench/: bench.pl
perl/t/: regex_pathological.t  struct.t
php/: AGENTS.md  DOCS.md  Makefile  README.md  composer.json  phpcs.xml.dist  phpstan.neon.dist  phpunit.xml
php/bench/: bench.php
php/src/: Struct.php
php/tests/: ClientTest.php  (+5 more)
pl/: Makefile  README.md
py/: DOCS.md  Makefile  README.md  pyproject.toml  test_copy.py
python/: AGENTS.md  DOCS.md  Makefile  NOTES.md  README.md  REVIEW.md  pyproject.toml  requirements-dev.txt
python/bench/: bench.py
python/tests/: sdk.py  test_regex_pathological.py  test_voxgig_client.py  test_voxgig_struct.py
python/voxgig_struct/: __init__.py  voxgig_struct.py
rb/: .rubocop.yml  DOCS.md  Makefile  test_client.rb  test_voxgig_struct.rb  voxgig_runner.rb  voxgig_struct.rb  walk_bench.rb
rs/: Cargo.toml  Makefile  NOTES.md  PLAN.md  README.md
rs/src/: consts.rs  lib.rs  major.rs  mini.rs  value.rs
rs/tests/: corpus.rs
ruby/: AGENTS.md  DOCS.md  Gemfile  Makefile  NOTES.md  README.md  REVIEW.md  test_client.rb  test_regex_pathological.rb  test_voxgig_struct.rb  voxgig_runner.rb  voxgig_struct.gemspec  voxgig_struct.rb  walk_bench.rb
rust/: AGENTS.md  Cargo.toml  DOCS.md  Makefile  NOTES.md  PLAN.md  README.md  rustfmt.toml
rust/examples/: bench.rs  doc_check2.rs
rust/src/: consts.rs  lib.rs  major.rs  mini.rs  ordered_map.rs  re.rs  value.rs
rust/tests/: corpus.rs  regex_pathological.rs
scala/: AGENTS.md  DOCS.md  Makefile  README.md
swift/: .gitignore  .swift-format  AGENTS.md  DOCS.md  Makefile  Package.swift  README.md
test/proto/rust/: Cargo.toml
test/proto/rust/examples/: smoke.rs
test/proto/rust/src/: lib.rs
tools/: bench.py  bench_report_html.py  check_corpus_regex.py  check_doc_examples.py  check_parity.py  gen_doc_examples.py  release_status.py
ts/: .prettierrc.json  DOCS.md  Makefile  README.md  package.json  simple_getpath_test.ts  test_getpath_comparison.ts
typescript/: AGENTS.md  DOCS.md  Makefile  README.md  eslint.config.mjs  package.json
zig/: AGENTS.md  DOCS.md  Makefile  README.md  build.zig  build.zig.zon
(+150 files in other folders)
