cabal-version:      2.4
name:               voxgig-struct
version:            0.1.0
synopsis:           Haskell port of voxgig/struct: JSON-like data structure utilities.
description:
  A faithful Haskell port of the canonical voxgig/struct library: utilities for
  walking, merging, transforming, injecting into, and validating JSON-like data
  structures (getpath, merge, inject, transform, validate, walk). No third-party
  dependencies — only the GHC boot libraries.
homepage:           https://github.com/voxgig/struct
bug-reports:        https://github.com/voxgig/struct/issues
license:            MIT
license-file:       LICENSE
author:             Voxgig
maintainer:         richard.rodger@voxgig.com
copyright:          (c) 2025-2026 Voxgig Ltd.
category:           Data
build-type:         Simple
extra-doc-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/voxgig/struct.git

library
  hs-source-dirs:   src
  -- VoxgigStruct is the public API; Vregex is its internal RE2-subset engine.
  exposed-modules:  VoxgigStruct
  other-modules:    Vregex
  build-depends:
      base  >=4.14 && <5
    , array >=0.5 && <0.6
  default-language: Haskell2010
  ghc-options:      -Wall
