# Packaging + tooling configuration for the Python port.
# Code quality: Ruff (lint + format) and mypy (static types).

# ---- Build backend ----
[build-system]
# setuptools>=77 enables the PEP 639 SPDX `license` string in [project].
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# ---- Project metadata ----
[project]
name = "voxgig-struct"
version = "0.1.0"
description = "Uniform JSON-shaped data structure manipulations — Python port of @voxgig/struct"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Voxgig" }]
keywords = ["voxgig", "struct", "json", "data"]

[project.urls]
Homepage = "https://github.com/voxgig/struct"
Repository = "https://github.com/voxgig/struct"

[tool.setuptools]
packages = ["voxgig_struct"]

# ---- Ruff: linter + formatter ----
# https://docs.astral.sh/ruff/
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
# A sensible, widely used baseline:
#   E/W  pycodestyle      F  pyflakes        I  isort
#   B    bugbear          UP pyupgrade       C4 comprehensions
#   SIM  simplify         RUF ruff-specific
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = [
  "E501",   # line length is handled by the formatter
  "B008",   # function call in default argument (used deliberately here)
]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports the public API; the imports are intentional.
"voxgig_struct/__init__.py" = ["F401"]
# Test runners use `from voxgig_struct import *` by design.
"tests/**" = ["B011", "F403", "F405"]

[tool.ruff.format]
quote-style = "single"

# ---- mypy: static type checking ----
# https://mypy.readthedocs.io/
[tool.mypy]
python_version = "3.10"
files = ["voxgig_struct"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
