[package]
name = "voxgig-struct"
version = "0.1.0"
edition = "2021"
description = "Uniform JSON-shaped data structure manipulations — Rust port of @voxgig/struct"
license = "MIT"
repository = "https://github.com/voxgig/struct"
keywords = ["voxgig", "data", "struct", "structure", "json"]

[lib]
name = "voxgig_struct"
path = "src/lib.rs"

[dependencies]
indexmap = "2"
regex = "1"
once_cell = "1"

[dev-dependencies]
serde_json = "1"
