[package]
name = "structproto"
version = "0.1.0"
edition = "2021"
description = "Test Provider (prototype) — Rust port of test/proto/ts/provider.ts"
license = "MIT"
publish = false

[lib]
name = "structproto"
path = "src/lib.rs"

[dependencies]
# Test harness is allowed a JSON crate (mirrors rust/Cargo.toml dev-dep).
# `preserve_order` keeps object key insertion order, so `functions()` returns
# the corpus order ("minor","getpath",…) rather than sorted keys.
serde_json = { version = "1", features = ["preserve_order"] }

# NOTE: the workspace `rust/` crate has no `regex` dependency (it ships its own
# regex engine in src/re.rs). To keep this prototype self-contained with no
# extra deps, regex matching is implemented with a tiny dependency-free matcher
# (see `mini_regex` below). See `// PROTOTYPE: regex simplified` comments.
